# stardance-cif

./: .gitignore  package.json
apps/cif-api/: alembic.ini  nixpacks.toml  pyproject.toml  railpack.toml  railway.json  requirements.txt
apps/cif-api/alembic/: env.py
apps/cif-api/alembic/versions/: 0caaf841b7b2_initial_schema.py  2a64e7afbe4c_drop_fk_experiments_asset_id.py  3afcbd0876dd_add_event_data_to_signal_events.py  4f767890ce95_phase4_qds_schema.py  99fb6f1b3a66_phase4_qds_signals_schema.py  a7290f92142f_add_component_and_event_type_enums.py  add_qualified_warm_enum_values.py  b16f116feb2f_phase3_deployment_pipeline.py  c2d3e4f5a6b7_add_preview_tokens.py  c3e4f5a6b7c8_add_auto_launch_event_type.py  c4f5a6b7c8d9_add_a2_pipeline_complete_event_type.py  create_deployments_base.py  fix_surfaces_schema_drift.py  merge_heads.py  phase5_intelligence_schema_phase5_intelligence_and_experiment_.py
apps/cif-api/app/: main.py
apps/cif-api/app/api/: a2_pipeline.py  ai.py  analytics.py  copilot.py  deployments.py  experiments.py  insights.py  internal.py  preview.py  public.py  qds.py  retrieval.py  signals.py  surfaces.py
apps/cif-api/app/core/: auth.py  config.py  slugify.py
apps/cif-api/app/db/: session.py
apps/cif-api/app/middleware/: tis.py
apps/cif-api/app/models/: __init__.py  asset.py  component.py  deployment.py  experiment.py  preview.py  qds.py  signal.py  surface.py
apps/cif-api/app/registry/: component_registry.py
apps/cif-api/app/routers/: render.py
apps/cif-api/tests/: test_phase2_contracts.py  test_phase4_render.py
(+80 files in other folders)
